--- a/dotapilib/Cargo.toml
+++ b/dotapilib/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-pest = "2.8.0"
+anyhow = "1.0.98"
 pest_derive = "2.8.0"
 regex = "1.11.1"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_yaml = "0.9.34"
