chore: working on building request

--- a/dotapilib/Cargo.toml
+++ b/dotapilib/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.98"
+async-recursion = "1.1.1"
 pest_derive = "2.8.0"
 regex = "1.11.1"
+reqwest = { version = "0.12.15", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
+tokio = { version = "1.45.0", features = ["full"] }
