chore: writing run function

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = {version = "4.5.37", features = ["derive"]}
 librustle = { path = "../librustle" }
+reqwest = "0.12.15"
+tokio = { version = "1.45.0", features = ["full"] }
