--- a/librustle/src/tests/test_yaml_files/simple_request_call.api.yaml
+++ b/librustle/src/tests/test_yaml_files/simple_request_call.api.yaml
@@ -1,6 +1,6 @@
 env:
   base_url:
-    default: "http://0.0.0.0:8000"
+    default: "http://httpbin.org/status/200"
 
 requests:
   # A simple request definition that might use environment variables
