--- a/librustle/Cargo.toml
+++ b/librustle/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.98"
+deno_core = "0.347.0"
 openapi = "0.1.5"
 pest_derive = "2.8.0"
 regex = "1.11.1"
