--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.98"
 openapi = "0.1.5"
 regex = "1.11.1"
 reqwest = { version = "0.12.15", features = ["json", "multipart"] }
+rhai = {version = "1.21.0", features = ["no_module", "no_function", "sync", "serde"]}
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 serde_yaml = { version = "0.9.34" }
