--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cli"
+name = "rustle-cli"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,5 @@ clap = {version = "4.5.37", features = ["derive"]}
 rustle-api = { path = "../api" }
 reqwest = "0.12.15"
 tokio = { version = "1.45.0", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
