--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "1.45.0", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 colored = "3.0.0"
+serde_json = "1.0"
