--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.98"
+bytes = "1.10.1"
 openapi = "0.1.5"
 regex = "1.11.1"
 reqwest = { version = "0.12.15", features = ["json", "multipart"] }
