--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dioxus-desktop = "0.6.3"
 dioxus = { version = "0.6.0", features = ['router'] }
+dioxus-free-icons = { version = "0.9", features = ["lucide"] }
+
 
 [features]
 default = ["desktop"]
