--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 dioxus-desktop = "0.6.3"
 dioxus = { version = "0.6.0", features = ['router'] }
 dioxus-free-icons = { version = "0.9", features = ["lucide"] }
+uuid = { version = "1.17.0", features = ["v4"] }
 
 
 [features]
