chore: changed api -> core

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = '2'
-members = ["cli", "api", "ui"]
+members = ["cli", "core", "ui"]
 
 [profile.wasm-dev]
 inherits = "dev"
