--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = {version = "4.5.37", features = ["derive"]}
-rustle-api = { path = "../api" }
+rustle-core = { path = "../core" }
 reqwest = "0.12.15"
 tokio = { version = "1.45.0", features = ["full"] }
 tracing = "0.1.41"
