--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "rustle-ui"
+name = "rustle-app"
 version = "0.1.0"
-authors = ["rubbie kelvin <rubbiekelvinvoltsman@gmail.com>"]
+authors = ["rubbie kelvin <dev.rubbie@gmail.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
