--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "redhat.vscode-yaml",
         "rust-lang.rust-analyzer",
-        "rhaiscript.vscode-rhai"
+        "rhaiscript.vscode-rhai",
+        "bradlc.vscode-tailwindcss"
     ]
 }
