--- a/components/Cargo.toml
+++ b/components/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2024"
 
 [dependencies]
 dioxus = { version = "0.6.0" }
+dioxus-desktop = { version = "0.6.3"}
 dioxus-free-icons = { version = "0.9", features = ["lucide"] }
