--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -9,7 +9,11 @@ edition = "2021"
 [dependencies]
 dioxus-desktop = "0.6.3"
 dioxus = { version = "0.6.0" }
-dioxus-free-icons = { version = "0.9", features = ["lucide"] }
+dioxus-free-icons = { version = "0.9", features = [
+    "lucide",
+    "hero-icons-outline",
+    "hero-icons-solid",
+] }
 uuid = { version = "1.17.0", features = ["v4"] }
 rustle-ui-components = { path = "../components" }
 
