--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -16,6 +16,7 @@ dioxus-free-icons = { version = "0.9", features = [
 ] }
 uuid = { version = "1.17.0", features = ["v4"] }
 rustle-ui-components = { path = "../components" }
+rustle-core = { path = "../core" }
 rfd = "0.15.3"
 
 
