--- a/components/Cargo.toml
+++ b/components/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 dioxus = { version = "0.6.0" }
 dioxus-desktop = { version = "0.6.3"}
 dioxus-free-icons = { version = "0.9", features = ["lucide"] }
+uuid = { version = "1.17.0", features = ["v4"] }
+rfd = "0.15.3"
