--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "files.associations": {
+        "*.ndoc": "yaml",
+    },
     "yaml.schemas": {
         "http://json-schema.org/draft-07/schema": [
             "**/*.draft-07.schema.yaml"
