--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "rustle-cli"
+name = "ndoc-cli"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 clap = {version = "4.5.37", features = ["derive"]}
-rustle-core = { path = "../core" }
+nd-core = { path = "../core" }
 reqwest = "0.12.15"
 tokio = { version = "1.45.0", features = ["full"] }
 tracing = "0.1.41"
