--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,3 +17,6 @@ thiserror = "2.0.12"
 tokio = { version = "1.45.0", features = ["full"] }
 tracing = "0.1.41"
 uuid = { version = "1.16.0", features = ["v4"] }
+
+[dev-dependencies]
+tempfile = "3.20.0"
