--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.98"
+async-recursion = "1.1.1"
 bytes = "1.10.1"
 openapi = "0.1.5"
 regex = "1.11.1"
@@ -16,7 +17,7 @@ serde_yaml = { version = "0.9.34" }
 thiserror = "2.0.12"
 tokio = { version = "1.45.0", features = ["full"] }
 tracing = "0.1.41"
-uuid = { version = "1.16.0", features = ["v4"] }
+uuid = { version = "1.16.0", features = ["v4", "serde"] }
 
 [dev-dependencies]
 tempfile = "3.20.0"
