--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1.0.140"
 serde_yaml = { version = "0.9.34" }
 thiserror = "2.0.12"
 tokio = { version = "1.45.0", features = ["full"] }
+tokio-stream = "0.1.17"
 tracing = "0.1.41"
 uuid = { version = "1.16.0", features = ["v4", "serde"] }
 
