--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,4 +22,10 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
+rfd = "0.15.3"
+serde_yaml = { version = "0.9.34" }
+uuid = { version = "1.16.0", features = ["v4", "serde"] }
+tokio = { version = "1.45.0", features = ["full"] }
+tokio-stream = "0.1.17"
+tracing = "0.1.41"
+anyhow = "1.0.98"
