--- a/components/Cargo.toml
+++ b/components/Cargo.toml
@@ -18,6 +18,7 @@ dioxus-free-icons = { version = "0.9", features = [
 uuid = { version = "1.17.0", features = ["v4"] }
 rfd = "0.15.3"
 tracing = "0.1.41"
+strum = { version = "0.27.1", features = ["derive"] }
 
 
 [features]
