--- a/components/Cargo.toml
+++ b/components/Cargo.toml
@@ -8,14 +8,13 @@ authors = ["rubbie kelvin <dev.rubbie@gmail.com>"]
 name = "components_lib"
 
 [dependencies]
-dioxus-desktop = "0.6.3"
 dioxus = { version = "0.6.0" }
 dioxus-free-icons = { version = "0.9", features = [
     "lucide",
     "hero-icons-outline",
     "hero-icons-solid",
 ] }
-uuid = { version = "1.17.0", features = ["v4"] }
+uuid = { version = "1.17.0", features = ["v4", "js"] }
 rfd = "0.15.3"
 tracing = "0.1.41"
 strum = { version = "0.27.1", features = ["derive"] }
