--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -19,6 +19,8 @@ tracing = "0.1.41"
 dioxus-logger = "0.6.2"
 components = {path = "../components"}
 tokio = { version = "1.45.1", features = ["full"] }
+serde_yaml = { version = "0.9.34" }
+
 
 [features]
 default = ["desktop"]
