--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -21,6 +21,7 @@ components = {path = "../components"}
 tokio = { version = "1.45.1", features = ["full"] }
 serde_yaml = { version = "0.9.34" }
 slug = "0.1.6"
+nanoid = "0.4.0"
 
 
 [features]
