--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -22,6 +22,7 @@ tokio = { version = "1.45.1", features = ["full"] }
 serde_yaml = { version = "0.9.34" }
 slug = "0.1.6"
 nanoid = "0.4.0"
+strum = { version = "0.27.1", features = ["derive"] }
 
 
 [features]
