--- a/components/Cargo.toml
+++ b/components/Cargo.toml
@@ -18,6 +18,7 @@ uuid = { version = "1.17.0", features = ["v4", "js"] }
 rfd = "0.15.3"
 tracing = "0.1.41"
 strum = { version = "0.27.1", features = ["derive"] }
+nanoid = "0.4.0"
 
 
 [features]
