--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,8 +1,9 @@
-name: Rust
+name: Build and Release
 
 on:
   push:
     branches: [ "main" ]
+    tags: [ "v*" ]
   pull_request:
     branches: [ "main" ]
 
@@ -10,13 +11,50 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  build-desktop:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
-    # - name: Build
-    #   run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Install Rust
+      uses: dtolnay/rust-toolchain@stable
+    - name: Install system dependencies (Linux)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev
+    - name: Install dioxus-cli
+      run: cargo install dioxus-cli
+    - name: Cache cargo registry
+      uses: actions/cache@v3
+      with:
+        path: ~/.cargo/registry
+        key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+    - name: Build desktop app
+      run: |
+        cd app
+        dx build --platform desktop --release
+    - name: Upload desktop build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: desktop-build-${{ matrix.os }}
+        path: app/dist/
+
+  release:
+    needs: [build-desktop]
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+    - uses: actions/checkout@v4
+    - name: Download all artifacts
+      uses: actions/download-artifact@v3
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          desktop-build-*/**/*
+        generate_release_notes: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
