--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -5,7 +5,6 @@ authors = ["rubbie kelvin <dev.rubbie@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-dioxus = { version = "0.6.1" }
 dioxus-free-icons = { version = "0.9", features = [
     "lucide",
     "hero-icons-outline",
@@ -13,7 +12,6 @@ dioxus-free-icons = { version = "0.9", features = [
 ] }
 uuid = { version = "1.17.0", features = ["v4", "js", "serde"] }
 nativedoctor-core = { path = "../core" }
-rfd = "0.15.3"
 tracing = "0.1.41"
 dioxus-logger = "0.6.2"
 components = { path = "../components" }
@@ -24,9 +22,20 @@ strum = { version = "0.27.1", features = ["derive"] }
 serde = "1.0.219"
 serde_json = "1.0.141"
 
+# Explicit getrandom with js feature for WASM support
+getrandom = { version = "0.2", features = ["js"] }
+
+# Web-only dependencies
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+dioxus = { version = "0.6.1", default-features = false, features = ["web", "macro"] }
+
+# Desktop-only dependencies (file dialogs don't work in browsers)
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+rfd = "0.15.3"
+dioxus = { version = "0.6.1", default-features = false, features = ["desktop", "macro"] }
 
 [features]
 default = ["desktop"]
-web = ["dioxus/web"]
-desktop = ["dioxus/desktop"]
-mobile = ["dioxus/mobile"]
+web = []
+desktop = []
+mobile = []
