--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,3 +13,6 @@ serde_yaml = { version = "0.9.34" }
 uuid = { version = "1.17.0", features = ["v4", "serde", "js"] }
 tracing = "0.1.41"
 anyhow = "1.0.98"
+
+# Explicit getrandom with js feature for WASM support
+getrandom = { version = "0.2", features = ["js"] }
