chore: egui base

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = '2'
-members = ["crates/app-egui", "crates/app-gpui", "crates/models"]
+members = ["crates/app-egui", "crates/app-gpui", "crates/models", "crates/nd-core"]
 default-members = ["crates/app-egui"]
 
 [profile.wasm-dev]
