--- a/crates/app-egui/Cargo.toml
+++ b/crates/app-egui/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
 eframe = "0.32.0"
 egui = "0.32.0"
+nd-core = { path = "../nd-core" }
