--- a/crates/app-egui/Cargo.toml
+++ b/crates/app-egui/Cargo.toml
@@ -7,4 +7,11 @@ edition = "2024"
 anyhow = "1.0.98"
 eframe = "0.32.0"
 egui = "0.32.0"
+env_logger = "0.11.8"
+log = "0.4.27"
 nd-core = { path = "../nd-core" }
+serde = { version = "1.0.219", features = ["derive"] }
+
+[[bin]]
+name = "nativedoctor"
+path = "./main.rs"
