--- a/crates/app-egui/Cargo.toml
+++ b/crates/app-egui/Cargo.toml
@@ -11,6 +11,7 @@ env_logger = "0.11.8"
 log = "0.4.27"
 nd-core = { path = "../nd-core" }
 serde = { version = "1.0.219", features = ["derive"] }
+strum = { version = "0.27.2", features = ["derive"] }
 
 [[bin]]
 name = "nativedoctor"
