--- a/crates/app-gpui/Cargo.toml
+++ b/crates/app-gpui/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-cargo-bundle = "0.8.0"
 gpui = { git = "https://github.com/rubbieKelvin/zed" }
+nd-core = { path = "../nd-core" }
