--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = '2'
 members = ["crates/app-egui", "crates/app-gpui", "crates/models", "crates/nd-core"]
-default-members = ["crates/app-gpui"]
+default-members = ["crates/app-egui"]
 
 [profile.wasm-dev]
 inherits = "dev"
