--- a/crates/app-ratatui/Cargo.toml
+++ b/crates/app-ratatui/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
 crossterm = "0.29.0"
 ratatui = { version = "0.29.0", features = ["all-widgets"] }
 serde = { version = "1.0.219", features = ["derive"] }
+tui-input = "0.14.0"
