--- a/crates/app-ratatui/Cargo.toml
+++ b/crates/app-ratatui/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
+color-eyre = "0.6.5"
 crossterm = "0.29.0"
 ratatui = { version = "0.29.0", features = ["all-widgets"] }
 serde = { version = "1.0.219", features = ["derive"] }
+nd-core = { path = "../nd-core" }
