--- a/crates/app-ratatui/Cargo.toml
+++ b/crates/app-ratatui/Cargo.toml
@@ -10,3 +10,4 @@ crossterm = "0.29.0"
 ratatui = { version = "0.29.0", features = ["all-widgets"] }
 serde = { version = "1.0.219", features = ["derive"] }
 nd-core = { path = "../nd-core" }
+strum = { version = "0.27.2", features = ["derive"] }
