--- a/crates/nd-core/Cargo.toml
+++ b/crates/nd-core/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+reqwest = { version = "0.12.23", features = ["blocking"] }
+models = { path = "../models" }
+anyhow = "1.0.99"
