--- a/crates/nd-core/Cargo.toml
+++ b/crates/nd-core/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2024"
 
 [dependencies]
 reqwest = { version = "0.12.23", features = ["blocking"] }
-models = { path = "../models" }
 anyhow = "1.0.99"
+serde = { version = "1.0.219", features = ["derive"] }
+strum = { version = "0.27.2", features = ["derive"] }
+serde_yaml = "0.9.34"
+
