--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.99"
 clap = { version = "4.5.47", features = ["derive"] }
+reqwest = { version = "0.12.23", features = ["blocking", "multipart"] }
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.143"
 serde_yaml = "0.9.34"
