--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ reqwest = { version = "0.12.23", features = ["blocking", "multipart"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 serde_yaml = "0.9.34"
+
+[dev-dependencies]
+tempfile = "3.10"
